--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   </ol>
 
  </div>
-
+<br>
+<div class="footer">
+    <p>Designed by: <a href="https://za.linkedin.com/in/tshivhidzo-makhokha-54ab6111b">Tshivhidzo </a></p>
+</div>
  <script src="js/add.js"></script>
 </body>
 
